# ComfyUI-LBMWrapper

./: nodes.py  pyproject.toml  readme.md  utils.py
.github/workflows/: publish.yml
example_workflows/: lbm_relight_example_01.json
lbm/inference/: utils.py
lbm/models/base/: base_model.py
lbm/models/embedders/latents_concat/: latents_concat_embedder_model.py
lbm/models/lbm/: lbm_model.py
lbm/models/vae/: autoencoderKL.py
